--- a/requirements_windows.txt
+++ b/requirements_windows.txt
@@ -1,7 +1,7 @@
 numpy>=1.20.3,<2.0
 Flask>=2.2.2
 SQLAlchemy>=2.0.20
-torch>=2.0
+# torch>=2.0
 Pillow>=8.1.0
 pillow-heif>=0.14.0
 transformers>=4.28.1
@@ -11,3 +11,4 @@ python-dotenv>=0.19.2
 tqdm>=4.66.1
 requests>=2.31.0
 torch-directml
+tqdm
